[package]
name = "python-ron"
version = "0.2.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyron"
crate-type = ["cdylib", "rlib"]

[dependencies]
ron = { git = "https://github.com/cswinter/ron.git", rev = "2599f54", features = ["indexmap"] }
ron-parser = { git = "https://github.com/cswinter/ron-parser", rev = "817f0c9" }

pyo3 = { version = "0.18", features = ["extension-module"] }
